Fixed team name overflow

--- a/app/coach/game-area/styles.less
+++ b/app/coach/game-area/styles.less
@@ -415,7 +415,6 @@
 
   .formationOption {
       display: inline-block;
-      width: 14%;
       padding-right: 20px;
       white-space: nowrap;
 
@@ -427,8 +426,7 @@
         background-color: white;
         color: @gray-light;
         font-weight: 400;
-        width: 100%;
-        max-width: 200px;
+        padding-right: 30px;
         text-overflow: ellipsis;
       }
     }
@@ -532,7 +530,6 @@
 
   .dndOption {
     display: inline-block;
-    width: 14%;
     padding-right: 20px;
     white-space: nowrap;
 
@@ -540,6 +537,7 @@
       padding: 0;
       position: absolute;
       bottom: 21px;
+      right: 20px;
     }
 
     span {
@@ -550,9 +548,7 @@
       background-color: white;
       color: @gray-light;
       font-weight: 400;
-      width: 100%;
-      max-width: 200px;
-      text-overflow: ellipsis;
+      padding-right: 30px;
     }
 
     .create-report-btn {
